- backend - adicao de flags nas tasks
